--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html class="blacklist"> <head>
-<title>Ubiquity Command from Untrusted Source</title>
-<link rel="stylesheet" href="chrome://global/skin/netError.css" type="text/css" media="all" />
-<link rel="icon" type="image/png" id="favicon" href="chrome://global/skin/icons/blacklist_favicon.png"/>
-</head>
-
-<body>
+<html class="blacklist">
+  <head>
+    <title>Ubiquity Command from Untrusted Source</title>
+    <link rel="stylesheet" href="chrome://global/skin/netError.css"
+          type="text/css" media="all" />
+    <link rel="icon" type="image/png" id="favicon"
+          href="chrome://global/skin/icons/blacklist_favicon.png"/>
+  </head>
+  <body>
     <div id="errorPageContainer">
-    
       <!-- Error Title -->
       <div id="errorTitle">
         <h1>Ubiquity Command from Untrusted Source</h1>
@@ -20,31 +21,40 @@
         </div>
 
         <div id="errorLongDesc">
-<p>Here is the JavaScript source code to the command:</p>
+          <p>Here is the JavaScript source code to the command:</p>
 
-<iframe id="jsIframe" width="80%"></iframe>
+          <iframe id="jsIframe" width="80%"></iframe>
 
-<p>If you understand JavaScript, you should read this and use your
-best judgement to decide whether the command is something that's safe
-to execute or not. Proceed at your own risk!</p>
-<p>If you don't understand JavaScript, you should not subscribe to the
-command unless the link was given to you by someone you know and
-trust.</p>
-<div class="todo" style="border-style:solid; border-width:2px; width:80%; padding:10px; border-color:#ffff00"><p><i>In the future, we plan to have a widget here
-  displaying what we call a &quot;social trust network&quot;.  You'll be able
-  to see whether any of your friends have tried out this command.  They can
-  either vouch for the command's safety or leave a warning about the command's
-  dangers.  We hope this will help people make informed decisions about whether
-  to subscribe to commands or not.  This feature should be coming in Ubiquity 0.2.
-  </i></p></div>
+          <p>If you understand JavaScript, you should read this and
+            use your best judgement to decide whether the command is
+            something that's safe to execute or not. Proceed at your
+            own risk!</p>
+
+          <p>If you don't understand JavaScript, you should not
+            subscribe to the command unless the link was given to you
+            by someone you know and trust.</p>
+
+          <div class="todo"
+               style="border-style:solid; border-width:2px; width:80%; padding:10px; border-color:#ffff00">
+            <p>In the future, we plan to have a widget here displaying
+              what we call a &quot;social trust network&quot;.  You'll
+              be able to see whether any of your friends have tried
+              out this command.  They can either vouch for the
+              command's safety or leave a warning about the command's
+              dangers.  We hope this will help people make informed
+              decisions about whether to subscribe to commands or not.
+              This feature should be coming in Ubiquity 0.2.</p>
+          </div>
         </div>
         <div id="buttons">
-	  <p><input type="submit" value="Get me outta here!"
-                    onclick="onCancel();"/>
-&nbsp;&nbsp;&nbsp;&nbsp;
-<input type="submit" value="I know what I'm doing. Subscribe to it!"
-       onclick="onSubmit();"/>
-</p>
+	  <p>
+            <input type="submit" value="Get me outta here!"
+                   onclick="onCancel();"/>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <input type="submit"
+                   value="I know what I'm doing. Subscribe to it!"
+                   onclick="onSubmit();"/>
+          </p>
         </div>
       </div>
     </div>
@@ -53,18 +63,20 @@ trust.</p>
       <p>You are now subscribing to the command feed and can use its functionality.</p>
       </div>
       <div id="confirmationLongDesc">
-      <p>If you ever want to unsubscribe, you can use the Ubiquity
-      &quot;help&quot; command at any time to get to the <a
-      href="about:ubiquity">command management page</a>, where you can
-      see what commands you are subscribed to, and cancel any that you
-      no longer want.</p>
-      <p>You may now close this window.</p>
+
+        <p>If you ever want to unsubscribe, you can use the Ubiquity
+          &quot;help&quot; command at any time to get to
+          the <a href="about:ubiquity">command management page</a>,
+          where you can see what commands you are subscribed to, and
+          cancel any that you no longer want.</p>
+
+        <p>You may now close this window.</p>
       </div>
     </div>
-</body>
-<script src="jquery-1.2.3.min.js"></script>
-<script type="application/javascript;version=1.7"
-        src="linkrel_codesource.js"></script>
-<script type="application/javascript;version=1.7"
-        src="confirm-add-command.js"></script>
+  </body>
+  <script src="jquery-1.2.3.min.js"></script>
+  <script type="application/javascript;version=1.7"
+          src="linkrel_codesource.js"></script>
+  <script type="application/javascript;version=1.7"
+          src="confirm-add-command.js"></script>
 </html>
