Modified Utils.url() so that if it is given a NsURI instead of a string, it just returns the NsURI back.  Replaced duplicate code in linkrel_codesource.js with this function.

--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -76,6 +76,8 @@
   </body>
   <script src="jquery-1.2.3.min.js"></script>
   <script type="application/javascript;version=1.7"
+          src="utils.js"></script>
+  <script type="application/javascript;version=1.7"
           src="linkrel_codesource.js"></script>
   <script type="application/javascript;version=1.7"
           src="confirm-add-command.js"></script>
