--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -49,6 +49,8 @@
 <ul id="command-feeds"></ul>
 </body>
 <script type="application/javascript;version=1.7"
+        src="utils.js"></script>
+<script type="application/javascript;version=1.7"
         src="linkrel_codesource.js"></script>
 <script type="application/javascript;version=1.7"
         src="chrome://ubiquity/content/about.js"></script>
