(1) Styled all Ubiquity pages to be prettier. Lots of clean colors and Helvetica. (2) Added a news feed to the About Ubiquity page. (3) Revamped the content for About Ubiquity. (4) Added a Ubiquity logo. (5) Made the Yelp command insert the first result if in a editable text field.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -8,45 +8,85 @@
         href="test.css" />
   <script type="text/javascript" src="prefkeys.js"></script>
   <script type="text/javascript" src="jquery-1.2.3.min.js"></script>
+  
   <title>About Ubiquity</title>
 </head>
 <body>
-<h1>Welcome to Ubiquity!</h1>
-<p>Here's some things you can do:</p>
-<ul>
-  <li>Use the <a href="editor.html">command editor</a> to play around
-  with creating new Ubiquity commands.  This isn't just a fun way to
+
+<div class="col-three">
+  <h1>Welcome to Ubiquity!</h1>
+  <h4>An experiment in <em>connecting</em> the web with <em>language</em>.</h4>
+</div>  
+
+<div class="col-three">
+  &nbsp;
+</div>
+
+<div class="col-two">
+  <img src="ubiquity_logo.png" style="position:relative;top:15px;float:right;"/>
+</div>
+
+<br clear="all"/>
+
+<div class="col-three">
+  <h2>Users</h2>
+
+  <p><strong>Take</strong> the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_User_Tutorial">Ubiquity tutorial</a> to master the basics.</p>
+
+  <p><strong>Sign-up</strong> to help us know about which Ubiquity commands are being used. Subscribe to the <a href="https://labs.toolness.com/ubiquity-herd/command-feed/">Heard Command</a>, which will add your data to the Herd Dashboard</a>&mdash;it's completely anonymous and will help us make Ubiquity better and safer.</p>
+
+
+  <p><object width="315" height="235">	<param name="allowfullscreen" value="true" />	<param name="allowscriptaccess" value="always" />	<param name="movie" value="http://www.vimeo.com/moogaloop.swf?clip_id=1561578&amp;server=www.vimeo.com&amp;show_title=1&amp;show_byline=0&amp;show_portrait=0&amp;color=cc6600&amp;fullscreen=1" />	<embed src="http://www.vimeo.com/moogaloop.swf?clip_id=1561578&amp;server=www.vimeo.com&amp;show_title=1&amp;show_byline=0&amp;show_portrait=0&amp;color=cc6600&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="315" height="235"></embed></object></p>
+  
+  <p><strong>Read</strong> the <a href="cmdlist.html">command documentation</a> to find out what commands you can use.</p>
+  
+  <p><strong>Change</strong> your hotkey.<br/>
+  <input id="keyInputBox" type="text" size="27"
+         onkeydown="PrefKeys.onKeyChange(event)" 
+         onfocus="this.value = 'Press your combination'"/>
+  <p id="keyNotify"></p></p>
+  
+  <h2>Subscribed Feeds</h2>
+  
+  <p><p id="command-feeds-header">You're currently subscribed to these command
+    feeds:</p>
+  <span id="command-feeds"></span></p>
+  
+</div>
+
+
+<div class="col-three">
+  <h2>Developers</h2>
+  <p><strong>Learn</strong> how to develop for Ubiquity by reading the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_Author_Tutorial">command author tutorial</a>.</p>
+  
+  <p>Use the <a href="editor.html">command editor</a> to play around
+  with <strong>creating new</strong> Ubiquity commands.  This isn't just a fun way to
   experiment with Ubiquity&mdash;it's actually a really easy way to
   experiment with Firefox development in general, because writing and
   changing commands doesn't require restarting Firefox, or even
-  manually reloading anything.</li>
-
-  <li>Read <a href="cmdlist.html">command documentation</a> for
-  information on the commands available to you.</li>
-
-  <li>Get involved! Learn how by visiting the
+  manually reloading anything.</p>
+  
+  <p><strong>Get involved!</strong> Learn how by visiting the
   <a href="http://wiki.mozilla.org/Labs/Ubiquity">Ubiquity Wiki</a>.
   Want to share a command to the world? Post it on the
-  <a href="http://wiki.mozilla.org/Labs/Ubiquity/Commands_In_The_Wild">Commands in the Wild</a>
-  wiki page.</li>
+  <a href="http://wiki.mozilla.org/Labs/Ubiquity/Commands_In_The_Wild">commands in the wild</a> wiki page. Also, sign up for the the <a href="https://labs.toolness.com/ubiquity-herd/command-feed/">heard command</a> which will then display your command on the <a href="https://labs.toolness.com/ubiquity-herd/">dashboard</a>.</p>
 
-  <li>Run the <a href="test.html">unit tests</a>.</li>
-
-  <li>Use the <a href="chrome://ubiquity/content/harness.xul">development
+  <p>Use the <a href="chrome://ubiquity/content/harness.xul">development
   harness</a> to develop the actual Ubiquity command entry user interface
-  and other aspects of Ubiquity without having to restart Firefox.</li>
+  and other aspects of Ubiquity without having to restart Firefox.</p>
   
-  <li>
-    Change your hotkey. Your current hotkey is &nbsp
-    <input id="keyInputBox" type="text" size="27"
-           onkeydown="PrefKeys.onKeyChange(event)" 
-           onfocus="this.value = 'Press your combination'"/>
-    <p id="keyNotify"></p>
-  </li>
-</ul>
-<p id="command-feeds-header">You're currently subscribed to these command
-  feeds:</p>
-<ul id="command-feeds"></ul>
+  <p>Run the <a href="test.html">unit tests</a>.</p>  
+</div>
+
+<div class="col-two">
+  <h2>News</h2>
+  <div id="news"></div>
+     
+</div>
+
+
+<br clear="all"/>
+
 </body>
 <script type="application/javascript;version=1.7"
         src="utils.js"></script>
