Made some small updates to the about page's visuals.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -23,7 +23,7 @@
 </div>
 
 <div class="col-two">
-  <img src="ubiquity_logo.png" style="position:relative;top:15px;float:right;"/>
+  <img src="ubiquity_logo.png" style="position:relative;top:9px; float:right;"/>
 </div>
 
 <br clear="all"/>
@@ -50,7 +50,7 @@
   
   <p><p id="command-feeds-header">You're currently subscribed to these command
     feeds:</p>
-  <span id="command-feeds"></span></p>
+  <ul id="command-feeds"></ul></p>
   
 </div>
 
@@ -67,8 +67,9 @@
   manually reloading anything.</p>
   
   <p><strong>Get involved!</strong> Learn how by visiting the
-  <a href="http://wiki.mozilla.org/Labs/Ubiquity">Ubiquity Wiki</a>.
-  Want to share a command to the world? Post it on the
+  <a href="http://wiki.mozilla.org/Labs/Ubiquity">Ubiquity Wiki</a>.</p>
+  
+  <p><strong>Share</strong> your commands. Post it on the
   <a href="http://wiki.mozilla.org/Labs/Ubiquity/Commands_In_The_Wild">commands in the wild</a> wiki page. Also, sign up for the the <a href="https://labs.toolness.com/ubiquity-herd/command-feed/">heard command</a> which will then display your command on the <a href="https://labs.toolness.com/ubiquity-herd/">dashboard</a>.</p>
 
   <p>Use the <a href="chrome://ubiquity/content/harness.xul">development
