Fixed small typos on about:ubiquity

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -33,7 +33,7 @@
 
   <p><strong>Take</strong> the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_User_Tutorial">Ubiquity tutorial</a> to master the basics.</p>
 
-  <p><strong>Sign-up</strong> to help us know about which Ubiquity commands are being used. Subscribe to the <a href="https://labs.toolness.com/ubiquity-herd/command-feed/">Heard Command</a>, which will add your data to the Herd Dashboard</a>&mdash;it's completely anonymous and will help us make Ubiquity better and safer.</p>
+  <p><strong>Sign-up</strong> to help us know about which Ubiquity commands are being used. Subscribe to the <a href="https://labs.toolness.com/ubiquity-herd/command-feed/">Herd Command</a>, which will add your data to the Herd Dashboard</a>&mdash;it's completely anonymous and will help us make Ubiquity better and safer.</p>
 
 
   <p><object width="315" height="235">	<param name="allowfullscreen" value="true" />	<param name="allowscriptaccess" value="always" />	<param name="movie" value="http://www.vimeo.com/moogaloop.swf?clip_id=1561578&amp;server=www.vimeo.com&amp;show_title=1&amp;show_byline=0&amp;show_portrait=0&amp;color=cc6600&amp;fullscreen=1" />	<embed src="http://www.vimeo.com/moogaloop.swf?clip_id=1561578&amp;server=www.vimeo.com&amp;show_title=1&amp;show_byline=0&amp;show_portrait=0&amp;color=cc6600&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="315" height="235"></embed></object></p>
@@ -70,7 +70,7 @@
   <a href="http://wiki.mozilla.org/Labs/Ubiquity">Ubiquity Wiki</a>.</p>
   
   <p><strong>Share</strong> your commands. Post it on the
-  <a href="http://wiki.mozilla.org/Labs/Ubiquity/Commands_In_The_Wild">commands in the wild</a> wiki page. Also, sign up for the the <a href="https://labs.toolness.com/ubiquity-herd/command-feed/">heard command</a> which will then display your command on the <a href="https://labs.toolness.com/ubiquity-herd/">dashboard</a>.</p>
+  <a href="http://wiki.mozilla.org/Labs/Ubiquity/Commands_In_The_Wild">commands in the wild</a> wiki page. Also, sign up for the the <a href="https://labs.toolness.com/ubiquity-herd/command-feed/">herd command</a> which will then display your command on the <a href="https://labs.toolness.com/ubiquity-herd/">dashboard</a>.</p>
 
   <p>Use the <a href="chrome://ubiquity/content/harness.xul">development
   harness</a> to develop the actual Ubiquity command entry user interface
