Split test.css into web-content.css and preview.css. The former is for styling web content, and the later is for styling Ubiquity itself. It may be worth adding another file called ubiquity.css for styling all of ubiquity. Anyway, this fixes the white problem I introduced two commits ago.

--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" type="text/css" media="all"
-        href="test.css" />
+        href="web-content.css" />
   <title>Ubiquity Commands</title>
 </head>
 <body>
