--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -2,7 +2,7 @@
 <html><head>
 <title>Ubiquity Command Editor</title>
 <script type="text/javascript" src="prefcommands.js"></script>
-<link rel="stylesheet" href="test.css" type="text/css">
+<link rel="stylesheet" href="web-content.css" type="text/css">
 </head>
 
 <body onload="document.getElementById('editor').value = PrefCommands.getCode();">
