--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -17,7 +17,7 @@ function startTestSuite() {
   suite.start();
 }
 </script>
-<link rel="stylesheet" href="test.css" type="text/css">
+<link rel="stylesheet" href="web-content.css" type="text/css">
 </head>
 <body onload="startTestSuite();">
 <h1>Ubiquity Test Suite</h1>
