--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <base href="chrome://ubiquity/content"/>
   <link rel="stylesheet" type="text/css" media="all"
-        href="test.css" />
+        href="web-content.css" />
   <script type="text/javascript" src="prefkeys.js"></script>
   <script type="text/javascript" src="jquery-1.2.3.min.js"></script>
   
