--- a/ubiquity/chrome/content/testJapaneseNLParser.html
+++ b/ubiquity/chrome/content/testJapaneseNLParser.html
@@ -14,7 +14,7 @@ function startTestSuite() {
   document.write("Test complete!");
 }
 </script>
-<link rel="stylesheet" href="test.css" type="text/css">
+<link rel="stylesheet" href="web-content.css" type="text/css">
 </head>
 <body onload="startTestSuite();">
 <h1>Japanese Parser Test Suite</h1>
