--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -22,7 +22,22 @@
 <script src="sandboxfactory.js"></script>
 <script src="builtinfactories.js"></script>
 <script src="cmdlist.js"></script>
-<h1>Ubiquity Commands</h1>
+
+<div class="head left">
+  <red>ubiquity</red> your command <em>list</em></span>
+</div>
+
+
+<div id="nav-container">
+  <ul id="nav">
+    <li><a href="about:ubiquity">Home</a></li>
+    <li><a href="chrome://ubiquity/content/cmdlist.html">Your Commands</a></li>
+    <li><a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_User_Tutorial">Tutorial</a></li>
+    <li><a href="https://labs.toolness.com/ubiquity-herd/">The Herd</a></li>
+  </ul>  
+</div>
+
+<br clear="all"/>
 <div class="command" id="cmd_google">
   <img class="icon" src="http://www.google.com/favicon.ico"/>
   <span class="name">google</span>
