--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -6,6 +6,23 @@
 </head>
 
 <body onload="document.getElementById('editor').value = PrefCommands.getCode();">
+  
+  <div class="head left">
+    <red>ubiquity</red> the command <em>editor</em></span>
+  </div>
+  
+  
+  <div id="nav-container">
+    <ul id="nav">
+      <li><a href="about:ubiquity">Home</a></li>
+      <li><a href="chrome://ubiquity/content/cmdlist.html">Your Commands</a></li>
+      <li><a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_User_Tutorial">Tutorial</a></li>
+      <li><a href="https://labs.toolness.com/ubiquity-herd/">The Herd</a></li>
+    </ul>  
+  </div>
+
+  <br clear="all"/>
+    
 <h1>Ubiquity Command Editor</h1>
 <div class="col-three">
   <p><strong>Enter new commands</strong> in the area below.  They will automatically be saved as you type, and will
