Improvements to cmdlist.html (including sorting) and command metadata handling

--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -38,5 +38,18 @@
 </div>
 
 <br clear="all"/>
+
+<div id="sort-container">
+  Sort commands by
+  <select id="sortby" size="1">
+    <option value=".name">Name</option>
+    <option value=".author">Author</option>
+    <option value=".license">License</option>
+    <option value=".homepage">Homepage</option>
+    <!--<option value=".subscribedate">Date Subscribed</option>
+    <option value=".updatedate">Date Updated</option>-->
+  </select>
+</div>
+
 </body>
 </html>
