Made the title of the ubiquity help pages look less like a banner advertisement.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -15,8 +15,8 @@
 <body>
     
   <div class="head">
-    <red>ubiquity</red> is 
-    an experiment in <em>connecting</em> the web with <em>language</em>.</span>
+    <span class="large">Ubiquity:&nbsp;</span>
+    An experiment in connecting the web with language
   </div>
 
     
