Fixed some bugs in the last-email command.

--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -23,8 +23,8 @@
 <script src="builtinfactories.js"></script>
 <script src="cmdlist.js"></script>
 
-<div class="head left">
-  <red>ubiquity</red> your command <em>list</em></span>
+<div class="head">
+  <span class="large">Ubiquity:</span> Your command list</span>
 </div>
 
 
