--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -33,7 +33,7 @@
     <li><a href="about:ubiquity">Home</a></li>
     <li><a href="chrome://ubiquity/content/cmdlist.html">Your Commands</a></li>
     <li><a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_User_Tutorial">Tutorial</a></li>
-    <li><a href="https://labs.toolness.com/ubiquity-herd/">The Herd</a></li>
+    <li><a href="https://labs.toolness.com/ubiquity-herd/">Find New Commands</a></li>
   </ul>  
 </div>
 
