Fixed #16, although instead of using file:// to inject jQuery we use resource://.  We can't use chrome b/c chrome URI's can't be included in content code.  Manually tested to make sure things still work.
--HG--
rename : ubiquity/chrome/content/jquery-1.2.3.min.js => ubiquity/scripts/jquery-1.2.3.min.js

--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -74,7 +74,7 @@
       </div>
     </div>
   </body>
-  <script src="jquery-1.2.3.min.js"></script>
+  <script src="resource://ubiquity-scripts/jquery-1.2.3.min.js"></script>
   <script type="application/javascript;version=1.7"
           src="utils.js"></script>
   <script type="application/javascript;version=1.7"
