--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" type="text/css" media="all"
         href="web-content.css" />
   <script type="text/javascript" src="prefkeys.js"></script>
-  <script type="text/javascript" src="jquery-1.2.3.min.js"></script>
+  <script type="text/javascript"
+          src="resource://ubiquity-scripts/jquery-1.2.3.min.js"></script>
   
   <title>About Ubiquity</title>
 </head>
