--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -8,7 +8,7 @@
   <title>Ubiquity Commands</title>
 </head>
 <body>
-<script src="jquery-1.2.3.min.js"></script>
+<script src="resource://ubiquity-scripts/jquery-1.2.3.min.js"></script>
 <script src="template.js"></script>
 <script type="application/javascript;version=1.7"
         src="utils.js"></script>
