--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -23,7 +23,7 @@
         <div id="errorLongDesc">
           <p>Here is the JavaScript source code to the command:</p>
 
-          <iframe id="jsIframe" width="80%"></iframe>
+          <div id="sourceCode"></div>
 
           <p>If you understand JavaScript, you should read this and
             use your best judgement to decide whether the command is
@@ -33,6 +33,8 @@
           <p>If you don't understand JavaScript, you should not
             subscribe to the command unless the link was given to you
             by someone you know and trust.</p>
+
+          <!-- TODO: Show code fingerprint (hash+size) too. -->
 
           <div class="todo"
                style="border-style:solid; border-width:2px; width:80%; padding:10px; border-color:#ffff00">
@@ -47,6 +49,11 @@
           </div>
         </div>
         <div id="buttons">
+          <p id="autoupdate-widget">
+          <input type="checkbox" id="autoupdate"/>Auto-update this feed.
+          <!-- TODO: Add description. If it's http (not https), -->
+          <!-- we should deliver extra warnings about MITM vulns. -->
+          </p>
 	  <p>
             <input type="submit" value="Get me outta here!"
                    onclick="onCancel();"/>
@@ -77,6 +84,8 @@
   <script src="resource://ubiquity-scripts/jquery-1.2.3.min.js"></script>
   <script type="application/javascript;version=1.7"
           src="utils.js"></script>
+  <script type="application/javascript;version=1.7"
+          src="codesource.js"></script>
   <script type="application/javascript;version=1.7"
           src="linkrel_codesource.js"></script>
   <script type="application/javascript;version=1.7"
