--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -31,6 +31,19 @@
 </div>
 
 <br clear="all"/>
+<div id="alerts">
+<div id="sanitizeOnShutdown-alert" class="alert" style="display: none;">
+<!-- Warning for bug #146. -->
+Your browsing history is set to be cleared every time you close
+Firefox.  At present, due to <a
+href="http://labs.toolness.com/trac/ticket/146">a bug in Ubiquity</a>,
+this also means that any command feeds you subscribe to will be lost.
+If you'd like to learn how to disable the clearing of private data
+when closing Firefox to work around this bug, please click <a
+href="http://support.mozilla.com/en-US/kb/Clearing+private+data#Configuring_private_data_removal">here</a>.
+Our apologies for the inconvenience.
+</div>
+</div>
 <br clear="all"/>
 
 
