Put the video in an iframe sandbox.
This fixes bug http://labs.toolness.com/trac/ticket/153

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -90,7 +90,7 @@ Our apologies for the inconvenience.
 <div class="col-four">
   <h2 class="top">Introduction Movie</h2>
 
-  <p><object width="395" height="295">	<param name="allowfullscreen" value="true" />	<param name="allowscriptaccess" value="always" />	<param name="movie" value="http://www.vimeo.com/moogaloop.swf?clip_id=1561578&amp;server=www.vimeo.com&amp;show_title=1&amp;show_byline=0&amp;show_portrait=0&amp;color=cc6600&amp;fullscreen=1" />	<embed src="http://www.vimeo.com/moogaloop.swf?clip_id=1561578&amp;server=www.vimeo.com&amp;show_title=1&amp;show_byline=0&amp;show_portrait=0&amp;color=cc6600&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="395" height="295"></embed></object></p>
+  <p><iframe width="395" height="295" style="border:none;" src="http://www.vimeo.com/moogaloop.swf?clip_id=1561578&amp;server=www.vimeo.com&amp;show_title=1&amp;show_byline=0&amp;show_portrait=0&amp;color=cc6600&amp;fullscreen=1"></iframe></p>
   
   <div id="commands-feeds-div">
     <h2>Subscribed Feeds</h2>
