Made the iframe for the intro video bigger so that no ugly scrollbars are displayed.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -90,7 +90,7 @@ Our apologies for the inconvenience.
 <div class="col-four">
   <h2 class="top">Introduction Movie</h2>
 
-  <p><iframe width="395" height="295" style="border:none;" src="http://www.vimeo.com/moogaloop.swf?clip_id=1561578&amp;server=www.vimeo.com&amp;show_title=1&amp;show_byline=0&amp;show_portrait=0&amp;color=cc6600&amp;fullscreen=1"></iframe></p>
+  <p><iframe width="410" height="340" frameborder="0" scrolling="no" src="http://www.vimeo.com/moogaloop.swf?clip_id=1561578&amp;server=www.vimeo.com&amp;show_title=1&amp;show_byline=0&amp;show_portrait=0&amp;color=cc6600&amp;fullscreen=1"></iframe></p>
   
   <div id="commands-feeds-div">
     <h2>Subscribed Feeds</h2>
