Added favicon for all Ubiquity pages (fixing #141)

--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -1,8 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html><head>
-<title>Ubiquity Command Editor</title>
-<script type="text/javascript" src="prefcommands.js"></script>
-<link rel="stylesheet" href="web-content.css" type="text/css">
+<html>
+
+<head>
+  <title>Ubiquity Command Editor</title>
+  <script type="text/javascript" src="prefcommands.js"></script>
+  <link rel="stylesheet" href="web-content.css" type="text/css">
+  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
 </head>
 
 <body onload="document.getElementById('editor').value = PrefCommands.getCode();">
