--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -6,6 +6,7 @@
   <base href="chrome://ubiquity/content"/>
   <link rel="stylesheet" type="text/css" media="all"
         href="web-content.css" />
+  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
   <script type="text/javascript" src="prefkeys.js"></script>
   <script type="text/javascript"
           src="resource://ubiquity-scripts/jquery-1.2.3.min.js"></script>
