--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -5,6 +5,7 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" type="text/css" media="all"
         href="web-content.css" />
+  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
   <title>Ubiquity Commands</title>
 </head>
 <body>
