--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -18,6 +18,7 @@ function startTestSuite() {
 }
 </script>
 <link rel="stylesheet" href="web-content.css" type="text/css">
+<link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
 </head>
 <body onload="startTestSuite();">
 <h1>Ubiquity Test Suite</h1>
