Added a section in the about:ubiquity page that informs users about the new version.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -93,6 +93,19 @@ extension.
 
 
 <div class="col-four">
+  <h2 class="top">Ubiquity 0.1.1 Released!</h2>
+
+  <p>We've just released the first patch for Ubiquity, which fixes a
+  few bugs and security enhancements.  Feel free to check out the <a
+  href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.1_Release_Notes">release
+  notes</a> for more information.</p>
+
+  <p>One caveat, though: the latest version may break your current
+  subscriptions, and you may have to unsubscribe from them and then
+  resubscribe to them to get them to work again.  Sorry for the
+  inconvenience, and thanks for participating in this Mozilla Labs
+  experiment.</p>
+
   <h2 class="top">Introduction Movie</h2>
 
   <p><iframe width="410" height="340" frameborder="0" scrolling="no" src="http://www.vimeo.com/moogaloop.swf?clip_id=1561578&amp;server=www.vimeo.com&amp;show_title=1&amp;show_byline=0&amp;show_portrait=0&amp;color=cc6600&amp;fullscreen=1"></iframe></p>
