Minorly changed wording in about:ubiquity.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -96,7 +96,7 @@ extension.
   <h2 class="top">Ubiquity 0.1.1 Released!</h2>
 
   <p>We've just released the first patch for Ubiquity, which fixes a
-  few bugs and security enhancements.  Feel free to check out the <a
+  lot of bugs and offers a few new features.  Feel free to check out the <a
   href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.1_Release_Notes">release
   notes</a> for more information.</p>
 
