'Auto-update this feed' text on subscription page is now clickable - fixes #220

--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -51,7 +51,7 @@
         <div id="buttons">
           <p id="autoupdate-widget">
           <input type="checkbox" id="autoupdate"/>
-          <span style="font-size: larger;">Auto-update this feed.</span>
+          <label for="autoupdate" style="font-size: larger;">Auto-update this feed.</label>
           <ul id="autoupdate-warning" style="display: none;">
             <p>This means that the feed will constantly be checked for
             functionality updates and automatically pushed to your
