--- a/ubiquity/chrome/content/mapping/mapping.html
+++ b/ubiquity/chrome/content/mapping/mapping.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>Google Maps JavaScript API Example: Simple Map</title>
-    <link rel="stylesheet" href="../preview.css" type="text/css">
+    <link rel="stylesheet" href="chrome://ubiquity/skin/skins/old/preview.css" type="text/css">
     <script src="http://maps.google.com/maps?file=api&v=2&key=ABQIAAAAzr2EBOXUKnm_jVnk0OJI7xSsTL4WIgxhMZ0ZK_kHjwHeQuOD4xQJpBVbSrqNn69S6DOTv203MQ5ufA"
             type="text/javascript"></script>
     <script type="text/javascript">
