--- a/ubiquity/chrome/content/skinlist.html
+++ b/ubiquity/chrome/content/skinlist.html
@@ -11,6 +11,8 @@
 <body>
 <script src="resource://ubiquity-scripts/jquery-1.2.3.min.js"></script>
 <script src="skinlist.js"></script>
+<script src="cmdlist.js"></script>
+<script src="utils.js"></script>
 
 <div class="head">
   <span class="large">Ubiquity:</span> Your skins</span>
