Created skin.xml metadata file for each skin and cleaned up the skin list page.

--- a/ubiquity/chrome/content/skinlist.html
+++ b/ubiquity/chrome/content/skinlist.html
@@ -31,23 +31,8 @@
 
 <br clear="all"/>
 
-<div id="sort-container">
-  Sort commands by
-  <select id="sortby" size="1">
-    <option value=".name">Name</option>
-    <option value=".author">Author</option>
-    <option value=".license">License</option>
-    <option value=".homepage">Homepage</option>
-    <!--<option value=".subscribedate">Date Subscribed</option>
-    <option value=".updatedate">Date Updated</option>-->
-  </select>
-</div>
+<h1 id="notify"></h1>
 <ul id="skin-list"></ul>
-<div id="skin-preview">
-  <div id="preview-image">Choose a skin.</div>
-  <input type="button" id="useskin" value="Use This Skin" disabled="disabled" />
-  <div id="error" class="error"></div>
-</div>
 
 </body>
 </html>
