Included suggestion_memory.js in test.html.  This fixes ticket #242.

--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -2,6 +2,7 @@
 <html><head>
 <title>Ubiquity Test Suite</title>
 <script type="text/javascript;version=1.7" src="cmdutils.js"></script>
+<script type="text/javascript;version=1.7" src="suggestion_memory.js"></script> 
 <script type="text/javascript;version=1.7" src="nlparser/parsersettings.js"></script>
 <script type="text/javascript;version=1.7" src="nlparser/en/verbtypes.js"></script>
 <script type="text/javascript;version=1.7" src="nlparser/en/parser.js"></script>
