Fixed favicon urls in all Ubiquity pages.

--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -5,7 +5,7 @@
   <title>Ubiquity Command Editor</title>
   <script type="text/javascript" src="prefcommands.js"></script>
   <link rel="stylesheet" href="web-content.css" type="text/css">
-  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="chrome://ubiquity/skin/icons/favicon.ico" type="image/x-icon" />
 </head>
 
 <body onload="document.getElementById('editor').value = PrefCommands.getCode();">
