--- a/ubiquity/chrome/content/skinlist.html
+++ b/ubiquity/chrome/content/skinlist.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" type="text/css" media="all"
         href="web-content.css" />
-  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="chrome://ubiquity/skin/icons/favicon.ico" type="image/x-icon" />
   <title>Ubiquity Skins</title>
 </head>
 <body>
