--- a/ubiquity/chrome/content/testJapaneseNLParser.html
+++ b/ubiquity/chrome/content/testJapaneseNLParser.html
@@ -15,7 +15,7 @@ function startTestSuite() {
 }
 </script>
 <link rel="stylesheet" href="web-content.css" type="text/css">
-<link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="chrome://ubiquity/skin/icons/favicon.ico" type="image/x-icon" />
 </head>
 <body onload="startTestSuite();">
 <h1>Japanese Parser Test Suite</h1>
