Added a unit test for the LinkRelCodeSource.

--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html><head>
 <title>Ubiquity Test Suite</title>
+<script type="text/javascript;version=1.7" src="utils.js"></script>
+<script type="text/javascript;version=1.7" src="linkrel_codesource.js"></script>
 <script type="text/javascript;version=1.7" src="cmdutils.js"></script>
 <script type="text/javascript;version=1.7" src="suggestion_memory.js"></script> 
 <script type="text/javascript;version=1.7" src="nlparser/parsersettings.js"></script>
