--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -91,7 +91,7 @@ extension.
   <p>Run the <a href="test.html">unit tests</a>.</p>
 
   <div id="command-feed-graveyard-div">
-    <h2>Unsubscribed Feeds</h2>
+    <h2>Feed Graveyard</h2>
     <p>
       <p id="command-feed-graveyard-header">You've recently unsubscribed to these command
       feeds:</p>
