--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -68,6 +68,11 @@ extension.
          onfocus="this.value = 'Press your combination'"
          onblur="PrefKeys.onLoad()"/>
   <p id="keyNotify"></p></p>
+  
+  <p><strong>Specify</strong>  your external editor <br/><br/> 
+  <input id="editorInputBox" type="file" size="27" 
+         style="cursor:pointer" 
+         onchange="Editor.onSave()"/>
 
   <h2>Developers</h2>
   <p><strong>Learn</strong> how to develop for Ubiquity by reading the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_Author_Tutorial">command author tutorial</a>.</p>
@@ -141,12 +146,13 @@ extension.
 
 
 
-
 </body>
 <script type="application/javascript;version=1.7"
         src="utils.js"></script>
 <script type="application/javascript;version=1.7"
         src="linkrel_codesource.js"></script>
+<script type="application/javascript;version=1.7"
+        src="chrome://ubiquity/content/editor.js"></script>
 <script type="application/javascript;version=1.7"
         src="chrome://ubiquity/content/about.js"></script>
 </html>
