--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -2,6 +2,7 @@
 <html><head>
 <title>Ubiquity Test Suite</title>
 <script type="text/javascript;version=1.7" src="utils.js"></script>
+<script type="text/javascript;version=1.7" src="codesource.js"></script>
 <script type="text/javascript;version=1.7" src="linkrel_codesource.js"></script>
 <script type="text/javascript;version=1.7" src="cmdutils.js"></script>
 <script type="text/javascript;version=1.7" src="suggestion_memory.js"></script> 
