Renamed "Paste to gist.github" to "Share your commands"."

--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -95,7 +95,7 @@
   </div>
 
   <div id="paste-as-div" class="col-two">
-    <b><a href="javascript:void(paste())">Paste</a> commands to <a href="http://gist.github.com/">gist.github</a></b>
+    <b><a href="javascript:void(paste())">Share your commands</a></b>
   </div>
 </div>
 
