Replaced the per-command-feed 'feedId' and 'dom' globals with a single global 'feed' object containing 'id' and 'dom' properties.

--- a/examples/inline-cmd.html
+++ b/examples/inline-cmd.html
@@ -19,7 +19,7 @@
 </body>
 <script class="commands">
 function cmd_hai2u() {
-  displayMessage('hai2u. ' + jQuery("#description", dom).text());
+  displayMessage('hai2u. ' + jQuery("#description", feed.dom).text());
 }
 </script>
 </html>
