--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -13,7 +13,8 @@
 <script src="template.js"></script>
 <script type="application/javascript;version=1.7"
         src="utils.js"></script>
-<script src="codesource.js"></script>
+<script type="application/javascript;version=1.7"
+        src="codesource.js"></script>
 <script type="application/javascript;version=1.7"
         src="linkrel_codesource.js"></script>
 <script src="prefcommands.js"></script>
