Minor refactorings to builtinfactories.js, addition of some (currently unused) code to provide infrastructure for #143.

--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -22,7 +22,8 @@
         src="cmdmanager.js"></script>
 <script src="msgservice.js"></script>
 <script src="sandboxfactory.js"></script>
-<script src="builtinfactories.js"></script>
+<script type="application/javascript;version=1.7"
+        src="builtinfactories.js"></script>
 <script src="cmdlist.js"></script>
 
 <div class="head">
