--- a/ubiquity/standard-feeds/firefox.html
+++ b/ubiquity/standard-feeds/firefox.html
@@ -3,19 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <title>Ubiquity Firefox Commands</title>
+  <title>Ubiquity Standard Firefox Commands</title>
+  <link rel="stylesheet" type="text/css" media="all"
+        href="standard-feeds.css" />
   <link rel="commands" href="firefox.js"/>
-  <style type="text/css">
-  <!--
-  body {
-    background: black;
-    color: gray;
-  }
-  .command {
-    color: white;
-  }
-  -->
-  </style>
 </head>
 <body>
 <p>This feed contains Firefox-specific commands.</p>
